# django-admin-data-views

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  manage.py  mkdocs.yml  pyproject.toml  search.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  main.yml  release.yml  test.yml
admin_data_views/: __init__.py  admin.py  apps.py  settings.py  typing.py  utils.py
admin_data_views/templates/admin_data_views/: admin_data_item_page.html  admin_data_table_page.html  dict_item.html  item.html  list_item.html
admin_data_views/templatetags/: admin_data_utils.py
docs/: index.md  setup.md
example_project/myapp/: admin.py  apps.py  models.py
example_project/myapp/migrations/: 0001_initial.py
example_project/project/: settings.py  testdb  urls.py  wsgi.py
search/: search_index.json
setup/: index.html
tests/: __init__.py  conftest.py  helpers.py  test_utils.py  test_views.py
tests/django/: asgi.py  settings.py  testdb  urls.py  wsgi.py
tests/myapp/: admin.py  apps.py
tests/myapp/migrations/: 0001_initial.py
tests/project/: settings.py  testdb
