[tool.poetry]
name = "django-admin-data-views"
version = "0.4.1"
description = "Add custom data views to django admin panel."
authors = [
    "Matti Lamppu <lamppu.matti.akseli@gmail.com>",
]
packages = [
    { include = "admin_data_views" },
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MrThearMan/django-admin-data-views"
repository = "https://github.com/MrThearMan/django-admin-data-views"
keywords = [
    "django",
    "admin",
    "panel",
    "custom",
    "views",
    "data",
]
include = [
    "README.md",
    "LICENSE",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
exclude = [
    "tests",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MrThearMan/django-admin-data-views/issues"


[tool.poetry.dependencies]
python = ">=3.10,<4"
Django = ">=3.2"
django-settings-holder = ">=0.1.2"

[tool.poetry.group.test.dependencies]
pytest = "8.3.2"
coverage = "7.6.1"
pytest-django = "4.8.0"
tox = "4.18.0"
tox-gh-actions = "3.2.0"
beautifulsoup4 = "4.12.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"
pymdown-extensions = "10.9"
mkdocs-mermaid2-plugin = "1.1.1"

[tool.poetry.group.lint.dependencies]
mypy = "1.11.2"
pre-commit = "3.8.0"
django-stubs = "5.0.4"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
extend-exclude = [
    "tests/*",
]
lint.typing-modules = [
    "admin_data_views.typing",
]
lint.explicit-preview-rules = true
lint.preview = true
lint.select = [
    "A",        # flake8-builtins
    "ANN",      # flake8-annotations
    "ARG",      # flake8-unused-arguments
    "B",        # flake8-bugbear
    "BLE",      # flake8-blind-except
    "C90",      # mccabe
    "C4",       # flake8-comprehensions
    "COM",      # flake8-commas
    "D200",     # pydocstyle: One-line docstring should fit on one line
    "D201",     # pydocstyle: No blank lines allowed before function docstring (found {num_lines})
    "D202",     # pydocstyle: No blank lines allowed after function docstring (found {num_lines})
    "D209",     # pydocstyle: Multi-line docstring closing quotes should be on a separate line
    "D213",     # pydocstyle: Multi-line docstring summary should start at the second line
    "DJ",       # flake8-django
    "DTZ",      # flake8-datetimez
    "E",        # pycodestyle errors
    "EM",       # flake8-errmsg
    "F",        # pyflakes
    "FA",       # flake8-future-annotations
    "FBT",      # flake8-boolean-trap
    "FLY",      # flynt
    "G",        # flake8-logging-format
    "I",        # isort
    "ICN",      # flake8-import-conventions
    "INP",      # flake8-no-pep420
    "INT",      # flake8-gettext
    "ISC",      # flake8-implicit-str-concat
    "LOG",      # flake8-logging
    "N",        # pep8-naming
    "PERF",     # perflint
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "PTH",      # flake8-use-pathlib
    "PYI",      # flake8-pyi
    "Q",        # flake8-quotes
    "R",        # Refactor
    "RET",      # flake8-return
    "RSE",      # flake8-raise
    "RUF",      # ruff-specific rules
    "S",        # flake8-bandit
    "SIM",      # flake8-simplify
    "SLF",      # flake8-self
    "T20",      # flake8-print
    "TCH",      # flake8-type-checking
    "TID",      # flake8-tidy-imports
    "TRY",      # tryceratops
    "UP",       # pyupgrade
    "W",        # pycodestyle warnings
]
# Preview rules
lint.extend-select = [
    "B909",     # loop-iterator-mutation
    "FURB110",  # if-exp-instead-of-or-operator
    "FURB142",  # for-loop-set-mutations
    "FURB145",  # slice-copy
    "FURB171",  # single-item-membership-test
    "FURB187",  # list-reverse-copy
    "PLE0307",  # invalid-str-return-type
    "PLR0916",  # too-many-boolean-expressions
    "PLR1730",  # if-stmt-min-max
    "PLR1733",  # unnecessary-dict-index-lookup
    "PLR1736",  # unnecessary-list-index-lookup
    "PLR6104",  # non-augmented-assignment
    "PLW0211",  # bad-staticmethod-argument
    "PLW0642",  # self-or-cls-assignment
    "RUF021",   # parenthesize-chained-operators
    "RUF022",   # unsorted-dunder-all
    "UP042",    # replace-str-enum
]
lint.ignore = [
    "ANN101",   # Missing type annotation for `self` in method
    "ANN102",   # Missing type annotation for `cls` in method
    "ANN401",   # Any-typing allowed
    "ARG001",   # Unused function argument
    "ARG002",   # Unused method argument
    "ARG003",   # Unused class method argument
    "RUF012",   # No need for ClassVar
    "G004",     # Logging statement uses f-string
    #
    # Conflicting with ruff-format
    #
    "COM812",   # missing-trailing-comma
    "COM819",   # prohibited-trailing-comma
    "D206",     # indent-with-spaces
    "D300",     # triple-single-quotes
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-with-invalid-multiple-comment
    "E117",     # over-indented
    "ISC001",   # single-line-implicit-string-concatenation
    "ISC002",   # multi-line-implicit-string-concatenation
    "Q000",     # bad-quotes-inline-string
    "Q001",     # bad-quotes-multiline-string
    "Q002",     # bad-quotes-docstring
    "Q003",     # avoidable-escaped-quote
    "W191",     # tab-indentation
]

[tool.mypy]
python_version = "3.12"
warn_return_any = "True"
warn_unused_configs = "True"
plugins = [
    "mypy_django_plugin.main",
]

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
omit = [
    "tests/*",
    "docs/*",
    ".venv/*",
    ".tox/*",
]
exclude_lines = [
    "if TYPE_CHECKING:",
    "except ImportError:",
    "pragma: no cover",
    "pass",
]

[tool.django-stubs]
django_settings_module = "example_project.project.settings"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{310, 311, 312}-django{32, 40, 41, 42, 50, 51}
isolated_build = true

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
allowlist_externals =
    poetry
setenv =
    PYTHONPATH = {toxinidir}
deps =
    django32: Django>=3.2,<4.0
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<4.3
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2

    django-settings-holder>=0.1.2

    pytest
    coverage
    pytest-django
    beautifulsoup4
commands =
    coverage run -m pytest -vv -s --disable-warnings
"""

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
